--- a/app/src/main/res/layout/fragment_highlights.xml
+++ b/app/src/main/res/layout/fragment_highlights.xml
@@ -5,14 +5,22 @@
     tools:context=".MainActivity"
     android:background="@android:color/white">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Highlights"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_gravity="center"
-        android:gravity="center"/>
+        android:orientation="vertical">
+        <ImageView
+            android:scaleType="fitXY"
+            android:src="@drawable/kenny"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+        <ImageView
+            android:scaleType="fitXY"
+            android:src="@drawable/tvf"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
 </FrameLayout>
